--- a/templates/charge.html
+++ b/templates/charge.html
@@ -21,17 +21,17 @@
         <span class="card-errors"></span>
         <div class="grid">
           <div class="field cell-6">
-            <label class="label">Nombre del tarjetahabiente</label>
+            <label class="label">Card Name</label>
             <input type="text" size="20" data-conekta="card[name]" class="input"/>
           </div>
           <div class="field cell-6">
-            <label class="label">Número de tarjeta de crédito</label>
+            <label class="label">Card Number</label>
             <input type="text" size="20" data-conekta="card[number]" class="input"/>
           </div>
         </div>
         <div class="grid">
           <div class="field cell-8">
-            <label class="label">Fecha de expiración (MM/AAAA)</label>
+            <label class="label">Expiration Date (MM/AAAA)</label>
             <div class="grid">
               <input type="text" size="2" data-conekta="card[exp_month]" class="input cell-4 exp"/>
               <span class="cell-4 exp">/</span>
@@ -45,29 +45,29 @@
         </div>
         <div class="grid">
           <div class="field cell-4">
-            <label class="label">Calle</label>
+            <label class="label">Address</label>
             <input type="text" size="25" data-conekta="card[address][street1]" class="input"/>
           </div>
           <div class="field cell-4">
-            <label class="label">Colonia</label>
+            <label class="label">Address 2</label>
             <input type="text" size="25" data-conekta="card[address][street2]" class="input"/>
           </div>
           <div class="field cell-4">
-            <label class="label">Ciudad</label>
+            <label class="label">City</label>
             <input type="text" size="25" data-conekta="card[address][city]" class="input"/>
           </div>
         </div>
         <div class="grid">
           <div class="field cell-4">
-            <label class="label">Estado</label>
+            <label class="label">State</label>
             <input type="text" size="25" data-conekta="card[address][state]" class="input"/>
           </div>
           <div class="field cell-4">
-            <label class="label">CP</label>
+            <label class="label">ZIP</label>
             <input type="text" size="5" data-conekta="card[address][zip]" class="input"/>
           </div>
           <div class="field cell-4">
-            <label class="label">País</label>
+            <label class="label">Country</label>
             <input type="text" size="25" data-conekta="card[address][country]" class="input"/>
           </div>
         </div>
