Add card-errors css

--- a/templates/charge.html
+++ b/templates/charge.html
@@ -11,6 +11,7 @@
       .padding-up { margin: 5% 0; }
       .exp { max-width: 33%; }
       .button { width: 80%; height: 80px; }
+      .card-errors { color: red; }
     </style>
   </head>
   <body>
